# AquaControl

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.bak.20260520091909  sdkconfig.defaults
.claude/: SKILL.md  audit.md  implementation_plan.md  technical_details.md
components/activity/: CMakeLists.txt  activity.cpp
components/devices/: CMakeLists.txt  color_utils.cpp  device_manager.cpp  device_types.cpp  pwm_device.cpp  relay_device.cpp  rgb_device.cpp
components/display/: CMakeLists.txt  backlight.cpp  display_driver.cpp  lvgl_port.cpp
components/drivers/: CMakeLists.txt  ds1307.cpp  pca9685.cpp  pcf8575.cpp  sht3x.cpp
components/faults/: CMakeLists.txt  faults.cpp
components/flash_chip_zbit/: CMakeLists.txt  chip_drivers.c  linker.lf  spi_flash_chip_zbit.c
components/history/: CMakeLists.txt  history_log.cpp
components/i2c_bus/: CMakeLists.txt  i2c_bus.cpp  i2c_scanner.cpp  (+1 more)
components/ui/: CMakeLists.txt  add_device_screen.cpp  boot_screen.cpp  chrome.cpp  dashboard.cpp  device_detail_screen.cpp  device_list_screen.cpp  dim_manager.cpp  display_system_screen.cpp  drum_roller.cpp  i18n.cpp  menu_screen.cpp  network_settings_screen.cpp  placeholder_screen.cpp  screen_manager.cpp  screensaver_screen.cpp  sensors_settings_screen.cpp  system_status_screen.cpp  theme.cpp  time_location_screen.cpp  triggers_screen.cpp  ui_context.cpp  wizard.cpp
components/ui/fonts/: roboto_14.c  roboto_18.c  roboto_24.c  roboto_32.c  roboto_48.c
components/ui/include/: add_device_screen.h  boot_screen.h  chrome.h  dashboard.h  device_detail_screen.h  device_list_screen.h  dim_manager.h  display_system_screen.h  drum_roller.h  i18n.h  menu_screen.h  network_settings_screen.h  placeholder_screen.h  screen_manager.h  screensaver_screen.h  sensors_settings_screen.h  system_status_screen.h  theme.h  time_location_screen.h  triggers_screen.h  ui_context.h  wizard.h
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.cpp  sys_cfg_api.h
(+77 files in other folders)
