idf_component_register(
    SRCS
        "main.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        logger
        i2c_bus
        drivers
        display
        touch
        ui
        storage
        time_mgr
        devices
        triggers
        scheduler
        sensors
        activity
        faults
        solar
        validators
        history
        wifi
        rtc
        mqtt_aqua
        web_portal
)
